gcc/testsuite/gdc.test/compilable/test19066.d
class C {}

int Object;

struct S
{
    int object;
    C Object;
}

void main()
{
}
