gcc/testsuite/gdc.test/fail_compilation/fail5851.d

class Foo
{
    Object o;
    alias o this;
}

void main()
{
}
